# backend-cookbook

./: README.md  pyproject.toml
surreal-db/: structure.MD  surrealdb.MD
surreal-db/lab_00_connection/: connection.py  local_cli.sh  start_db.sh
surreal-db/lab_01_relational/: hand_on_relational.py  relational.MD
