[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend-cookbook"
version = "0.1.0"
description = "Backend cookbook project"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "surrealdb>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

addopts = [
    "--cov=backend_cookbook",
    "--cov-report=term-missing",
]